# DRF_HW

./: .env.sample  cov.txt  groups_data.json  pyproject.toml  users_data.json
config/: settings.py  urls.py
materials/: models.py  serializers.py  urls.py  views.py
materials/migrations/: 0001_initial.py  0002_alter_lesson_course.py  0003_course_owner_lesson_owner.py  0004_subscription.py  0005_course_last_update.py  0006_subscription_status.py  0007_alter_subscription_status.py
users/: models.py  permissions.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_user.py  0004_remove_user_username.py  0005_payment_payment_link_payment_session_id.py
